--- a/Marcial-java/src/main/webapp/WEB-INF/web.xml
+++ b/Marcial-java/src/main/webapp/WEB-INF/web.xml
@@ -3,21 +3,21 @@
 
 
     <servlet>
-        <servlet-name>textsearch</servlet-name>
-        <servlet-class>com.google.appengine.demos.search.TextSearchServlet</servlet-class>
+        <servlet-name>user</servlet-name>
+        <servlet-class>com.google.appengine.demos.search.USer</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>textsearch</servlet-name>
-        <url-pattern>/search</url-pattern>
+        <servlet-name>user</servlet-name>
+        <url-pattern>/user</url-pattern>
     </servlet-mapping>
 
     <servlet>
-        <servlet-name>arabiansearch</servlet-name>
-        <servlet-class>com.google.appengine.demos.search.ArabianSearchServlet</servlet-class>
+        <servlet-name>asbadaspossible</servlet-name>
+        <servlet-class>com.google.appengine.demos.search.AsBadAsPossible</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>arabiansearch</servlet-name>
-        <url-pattern>/nights</url-pattern>
+        <servlet-name>asbadaspossible</servlet-name>
+        <url-pattern>/asbadaspossible</url-pattern>
     </servlet-mapping>
     
 
@@ -25,17 +25,5 @@
       <welcome-file>redirect.jsp</welcome-file>
     </welcome-file-list>
 
-
-
-
-	<servlet>
-	    <servlet-name>internals</servlet-name>
-	    <servlet-class>com.mru.cloud.InternalsServlet</servlet-class>
-	</servlet>
-
-	<servlet-mapping>
-	    <servlet-name>internals</servlet-name>
-	    <url-pattern>/internals/*</url-pattern>
-	</servlet-mapping>	  
 
 </web-app>
