--- a/java-search/src/main/webapp/WEB-INF/web.xml
+++ b/java-search/src/main/webapp/WEB-INF/web.xml
@@ -21,21 +21,13 @@
     </servlet-mapping>
 
     <servlet>
-        <servlet-name>createindex</servlet-name>
-        <servlet-class>com.google.appengine.demos.search.CreateIndexes</servlet-class>
+        <servlet-name>index</servlet-name>
+        <servlet-class>com.google.appengine.demos.search.Indexes</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>createindex</servlet-name>
-        <url-pattern>/createindex</url-pattern>
+        <servlet-name>index</servlet-name>
+        <url-pattern>/index</url-pattern>
     </servlet-mapping>
-    <servlet>
-        <servlet-name>deleteindex</servlet-name>
-        <servlet-class>com.google.appengine.demos.search.DeleteIndexes</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>deleteindex</servlet-name>
-        <url-pattern>/deleteindex</url-pattern>
-    </servlet-mapping>        
 
     <welcome-file-list>
       <welcome-file>redirect.jsp</welcome-file>
